[package]
name = "osc-repeater"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "osc-repeater"
path = "src/main.rs"

[[bin]]
name = "osc-send"
path = "src/send.rs"

[dependencies]
rosc = "0.10"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
